--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "sass": "^1.69.5",
-    "vue": "^3.3.8"
+    "vue": "^3.3.8",
+    "vue3-circle-progress": "^1.0.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
